# lgtm-mcp

./: .gitignore  PLAN.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: token-efficiency.yaml
src/lgtm_mcp/: __init__.py  config.py  executor.py  server.py  tracing.py  truncate.py
src/lgtm_mcp/clients/: __init__.py  base.py  loki.py  prometheus.py  tempo.py
src/lgtm_mcp/models/: __init__.py  config.py  loki.py  prometheus.py  tempo.py
src/lgtm_mcp/resources/: __init__.py  labels.py  metrics.py  syntax.py
src/lgtm_mcp/tools/: __init__.py  loki.py  prometheus.py  tempo.py
src/lgtm_mcp/utils/: __init__.py  charts.py
tests/: __init__.py
tests/eval/: __init__.py  config.yaml  runner.py  scenarios.yaml
